--- a/frontend/src/components/ProductDetail/style.css
+++ b/frontend/src/components/ProductDetail/style.css
@@ -1,4 +1,3 @@
-/* src/components/ProductDetails.css */
 .product-details {
   display: flex;
   flex-direction: column;
@@ -7,13 +6,7 @@
   height: 80vh;
 }
 
-
-
-
-
-/* Product Container */
-
-.product-container{
+.product-container {
   display: flex;
   column-gap: 74px;
   align-items: center;
@@ -25,7 +18,7 @@
   height: 60vh;
 }
 
-.product-image-container{
+.product-image-container {
   background-color: whitesmoke;
   border-radius: 12px;
   box-shadow: 0 0 2px 0 grey;
@@ -38,7 +31,7 @@
   padding: 8px;
 }
 
-.product-image-container img{
+.product-image-container img {
   width: fit-content;
   height: fit-content;
   max-width: 180px;
@@ -46,24 +39,23 @@
   margin: auto;
 }
 
-
-.images-holder{
+.images-holder {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
 }
 
-.images-holder img{
+.images-holder img {
   width: 59px;
   height: 59px;
   cursor: pointer;
 }
 
-.images-holder img:hover{
+.images-holder img:hover {
   border: 2px solid #ff6600;
-
 }
-.product-info{
+
+.product-info {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -71,37 +63,94 @@
   row-gap: 18px;
 }
 
-.price{
+.price {
   color: #ff6600;
   font-size: 22px;
 }
 
+.quantity-controls {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
 
+.quantity-controls span{
+  flex: 1;
+  text-align: center;
+  padding: 10px;
 
-@media (max-width : 760px) {
-  .product-details{
+}
+
+.quantity-btn {
+  background-color: #ff6600;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  flex: 0.15;
+}
+
+.quantity-btn:hover {
+  background-color: #e65a00;
+}
+
+.add-to-cart-btn {
+  background-color: #ff6600;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.add-to-cart-btn:hover {
+  background-color: #e65a00;
+}
+
+@media (max-width: 760px) {
+  .product-details {
     height: 100%;
   }
-  .product-container{
+
+  .product-container {
     flex-direction: column;
     padding: 0;
     height: 100%;
     margin-top: 50px;
   }
-  .product-image-container{
+
+  .product-image-container {
     flex: 0.75;
     width: 100%;
-    height: 400px; 
+    height: 400px;
   }
-  .product-image-container img{
+
+  .product-image-container img {
     margin: 10px auto 2px auto;
   }
-.images-holder img{
+
+  .images-holder img {
     height: 32px;
-    width: 32px; 
- }
-  .product-info{
-    /* display: none; */
+    width: 32px;
+  }
+
+  .product-info {
     margin-top: 20px;
+  }
+
+  .quantity-controls {
+    margin-bottom: 10px;
+  }
+
+  .quantity-btn {
+    padding: 5px;
+  }
+
+  .add-to-cart-btn {
+    padding: 8px 16px;
+    font-size: 14px;
   }
 }
