--- a/frontend/src/components/category-card/style.css
+++ b/frontend/src/components/category-card/style.css
@@ -48,14 +48,22 @@
   .category-card-container {
     width: 100%;
     margin: 0;
-    padding: 16px;
-    margin-top: 40px;
+    padding: 4px 20px;
+    margin-top: 60px;
+    background-color: #ff6600;
     justify-content: space-evenly;
   }
   
   .category-card {
-    width: 100%;
+    height: 70px;
   }
+
+  .category-card span{
+    font-size: 10px;
+    text-align: center;
+    text-wrap: nowrap;
+  }
+
   .category-card img {
     width: 40px;
     height: 40px;
