--- a/frontend/src/components/productCard/style.css
+++ b/frontend/src/components/productCard/style.css
@@ -1,10 +1,10 @@
-
 .product-card {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 20px;
   width: 250px;
+  height: 250px;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
@@ -12,8 +12,9 @@
 
 .product-card img {
   max-width: 100%;
-  height: auto;
+  height: 60%;
   border-radius: 8px;
+  margin-bottom: 5px;
 }
 
 .product-name {
