--- a/frontend/src/components/footer/style.css
+++ b/frontend/src/components/footer/style.css
@@ -30,6 +30,12 @@
 .footer-text {
   font-size: 1rem;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.footer-text svg {
+  margin-right: 8px;
 }
 
 .socials {
@@ -41,6 +47,7 @@
   text-decoration: none;
   margin: 0 10px;
   transition: color 0.3s ease;
+  font-size: 1.5rem;
 }
 
 .social-link:hover {
@@ -81,5 +88,9 @@
 
   .footer-section {
     text-align: center;
+  }
+
+  .footer-text {
+    justify-content: center;
   }
 }
